# confidential-asset-bindings

./: .gitignore  .mise.toml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  package-lock.json  package.json
.changeset/: ffi-multi-language-bindings.md
.claude/: CLAUDE.md
.github/workflows/: bindings-release.yml  build-wasm.yml  ci.yml  publish-python.yml  release.yml  tag-go-bindings.yml
aptos-confidential-asset-wasm-bindings/: aptos_confidential_asset_wasm-cjs.js  aptos_confidential_asset_wasm-esm.js  aptos_confidential_asset_wasm.d.ts  aptos_confidential_asset_wasm_bg.wasm  aptos_confidential_asset_wasm_bg.wasm.d.ts  index.d.ts  index.js  package.json
aptos-confidential-asset-wasm-bindings/pollard-kangaroo/: aptos_pollard_kangaroo_wasm-cjs.js  aptos_pollard_kangaroo_wasm-esm.js  aptos_pollard_kangaroo_wasm.d.ts  aptos_pollard_kangaroo_wasm_bg.wasm  aptos_pollard_kangaroo_wasm_bg.wasm.d.ts
aptos-confidential-asset-wasm-bindings/range-proofs/: aptos_rp_wasm-cjs.js  aptos_rp_wasm-esm.js  aptos_rp_wasm.d.ts  aptos_rp_wasm_bg.wasm  aptos_rp_wasm_bg.wasm.d.ts
bindings/cpp/: CMakeLists.txt  README.md
bindings/go/: README.md  go.mod
bindings/go/aptosconfidential/: cgo_darwin_amd64.go  cgo_darwin_arm64.go  cgo_linux_amd64.go  cgo_linux_amd64_musl.go  cgo_linux_arm64.go  cgo_linux_arm64_musl.go  cgo_windows_amd64.go  cgo_windows_arm64.go  gen.go  golden_test.go
bindings/go/aptosconfidential/include/: aptos_confidential_asset.h
bindings/go/aptosconfidential/native/: .gitignore
bindings/go/aptosconfidential/tools/download/: main.go  main_test.go  version.go
bindings/python/: README.md  pyproject.toml
bindings/python/python/aptos_confidential_asset/: __init__.py
bindings/python/tests/: conftest.py  test_golden_fixture.py  test_smoke.py
bindings/zig/: README.md  build.zig  build.zig.zon
bindings/zig/src/: main.zig
docs/: architecture.md  bindings.md
docs/contributors/: project-structure.md  releasing.md
examples/browser/: package-lock.json
examples/cpp/: CMakeLists.txt  README.md  main.cpp
examples/go/: main.go
examples/node/: package-lock.json
examples/python/: README.md  smoke.py
examples/testnet-flow/: README.md  env.example  run.sh
examples/testnet-flow/go/: go.mod  main.go
examples/testnet-flow/python/: run_flow.py
examples/zig/: README.md
ios/Rust/Headers/: confidential_asset_mobile.h
pollard-kangaroo/: Cargo.toml
pollard-kangaroo/src/: wasm.rs
range-proofs/: Cargo.toml
rust/: Cargo.toml
rust/core/: Cargo.toml
rust/core/examples/: emit_binding_golden_vector.rs
rust/core/tests/: binding_golden_fixture.rs
rust/ffi/: Cargo.toml
rust/ffi/include/: aptos_confidential_asset.h
rust/mobile/: Cargo.toml
rust/mobile/src/: jni.rs  lib.rs
rust/python/: Cargo.toml
rust/python/src/: lib.rs
scripts/: build-all.sh  build-ios.sh  build-pollard-kangaroo.sh  build-range-proofs.sh  build-wasm.sh  changeset-version.sh  check-binding-parity.sh  gen-npm-pkg.sh  wasm-sizes.sh
unified/: Cargo.toml
unified/src/: discrete_log.rs  lib.rs  range_proof.rs
