[package]
name = "aptos_pollard_kangaroo_wasm"
edition = "2021"

[features]
default = ["tbsgs_k"]
# Algorithm selection for 32-bit and 16-bit DLs.
# (Only enable one at a time to minimize WASM size!)
# All variants share tables for 16-bit lookups.
#
# - tbsgs_k (default, recommended): TBSGS-k32 (32-bit) + NaiveTruncatedDoubledLookup (16-bit)
#   Smallest table (~512 KiB) with good performance.
# - bsgs_k: BSGS-k32 (32-bit) + NaiveDoubledLookup (16-bit), sharing BSGS-k table (~2 MiB)
# - bsgs: BSGS (32-bit) + NaiveLookup from BSGS baby_steps (16-bit), sharing BSGS table (~2 MiB)
# - bl12: BL12 (32-bit + 16-bit) - smallest table (~258 KiB) but slower
tbsgs_k = ["pollard-kangaroo/tbsgs_k_table32"]
bsgs_k = ["pollard-kangaroo/bsgs_k_table32"]
bsgs = ["pollard-kangaroo/bsgs_table32"]
bl12 = ["pollard-kangaroo/bl12_table32"]

[dependencies]
curve25519-dalek = { version = "4", default-features = false }
wasm-bindgen = "0.2.99"
getrandom = { version = "0.2", features = ["js"] }
# Use local path for development; switch to git URL for release
pollard-kangaroo = { path = "../../pollard-kangaroo", default-features = false }

[lib]
crate-type = ["cdylib"]
