[package]
name = "aptos-confidential-asset-python"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "aptos_confidential_asset_native"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.23", features = ["extension-module", "abi3-py39"] }
aptos_confidential_asset_core = { path = "../core", default-features = false }

[features]
default = ["tbsgs_k"]
tbsgs_k = ["aptos_confidential_asset_core/tbsgs_k"]
bsgs_k = ["aptos_confidential_asset_core/bsgs_k"]
bsgs = ["aptos_confidential_asset_core/bsgs"]
bl12 = ["aptos_confidential_asset_core/bl12"]
